SelectTypesAgent first pass

--- a/agents.ipynb
+++ b/agents.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 26,
    "id": "c2805952",
    "metadata": {},
    "outputs": [],
@@ -11,13 +11,35 @@
     "from pydantic_ai.models.anthropic import AnthropicModel\n",
     "import requests\n",
     "from pydantic import BaseModel, Field\n",
-    "from typing import Any\n",
-    "import json"
+    "import json\n",
+    "from dotenv import load_dotenv"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 25,
+   "id": "b0a48cc1",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 25,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Load Anthropic API key\n",
+    "load_dotenv()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
    "id": "5w1o5t895l8",
    "metadata": {},
    "outputs": [],
@@ -51,7 +73,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 28,
    "id": "d5fcbeyapt",
    "metadata": {},
    "outputs": [],
@@ -173,6 +195,207 @@
     "    print(f\"  Interactions: {patient_meta.interactions}\")\n",
     "    print(f\"  Number of search parameters: {len(patient_meta.search_params)}\")\n",
     "    print(f\"  First 5 search parameters: {[p.name for p in patient_meta.search_params[:5]]}\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
+   "id": "rvi0kt69iy",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Pydantic model for Select Types Agent output\n",
+    "\n",
+    "class SelectedResourceTypes(BaseModel):\n",
+    "    \"\"\"Result of resource type selection from user query\"\"\"\n",
+    "    selected_types: list[str] = Field(\n",
+    "        default=[],\n",
+    "        description=\"List of selected resource types, ordered by relevance (most relevant first)\"\n",
+    "    )\n",
+    "    confidence: float = Field(\n",
+    "        default=0.0,\n",
+    "        ge=0.0,\n",
+    "        le=1.0,\n",
+    "        description=\"Confidence score (0.0-1.0) for the selection\"\n",
+    "    )\n",
+    "    reasoning: str = Field(\n",
+    "        description=\"Explanation of why these types were selected\"\n",
+    "    )\n",
+    "    error: str | None = Field(\n",
+    "        default=None,\n",
+    "        description=\"Error message if type not found or not searchable\"\n",
+    "    )"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "zdbkt5ot9ks",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class SelectTypesAgent:\n",
+    "    \"\"\"Agent for selecting FHIR resource types from natural language queries\"\"\"\n",
+    "\n",
+    "    def __init__(self, metadata: FHIRMetadata):\n",
+    "        \"\"\"\n",
+    "        Initialize the agent with FHIR server metadata.\n",
+    "\n",
+    "        Args:\n",
+    "            metadata: FHIRMetadata object containing available searchable types\n",
+    "        \"\"\"\n",
+    "        self.metadata = metadata\n",
+    "        self.model = AnthropicModel('claude-opus-4-5')\n",
+    "\n",
+    "        self.agent = Agent(\n",
+    "            model=self.model,\n",
+    "            output_type=SelectedResourceTypes,\n",
+    "            system_prompt=self._build_system_prompt()\n",
+    "        )\n",
+    "\n",
+    "    def select_types(self, query: str) -> SelectedResourceTypes:\n",
+    "        \"\"\"\n",
+    "        Analyze query and return selected resource types.\n",
+    "\n",
+    "        Args:\n",
+    "            query: Natural language query from user\n",
+    "\n",
+    "        Returns:\n",
+    "            SelectedResourceTypes with selected types, confidence, and reasoning\n",
+    "        \"\"\"\n",
+    "        result = self.agent.run_sync(query)\n",
+    "        return result.output\n",
+    "\n",
+    "    def _build_system_prompt(self) -> str:\n",
+    "        \"\"\"Build dynamic system prompt with available types from metadata\"\"\"\n",
+    "        types_list = \", \".join(sorted(self.metadata.searchable_types))\n",
+    "\n",
+    "        return f\"\"\"You are a FHIR resource type selector. Analyze user queries and select the appropriate FHIR resource type(s).\n",
+    "\n",
+    "Available searchable resource types ({len(self.metadata.searchable_types)} total):\n",
+    "{types_list}\n",
+    "\n",
+    "Your task:\n",
+    "1. Analyze the user's query to understand what data they want\n",
+    "2. Select the most appropriate resource type(s) from the available list above\n",
+    "3. Return types in order of relevance (most relevant first)\n",
+    "4. Provide a confidence score (0.0-1.0) and reasoning\n",
+    "\n",
+    "Confidence scoring guidelines:\n",
+    "- 0.9-1.0: Exact type name mentioned or very clear semantic match\n",
+    "- 0.7-0.9: Clear semantic match with good context\n",
+    "- 0.5-0.7: Reasonable match but some ambiguity\n",
+    "- 0.3-0.5: Multiple valid options, unclear which is best\n",
+    "- 0.0-0.3: Very uncertain or no good matches\n",
+    "\n",
+    "Common mappings:\n",
+    "- \"patients\", \"patient demographics\", \"people\" → Patient\n",
+    "- \"vital signs\", \"blood pressure\", \"lab results\", \"observations\" → Observation\n",
+    "- \"medications\", \"prescriptions\", \"drugs\" → Medication, MedicationRequest\n",
+    "- \"encounters\", \"visits\", \"appointments\" → Encounter\n",
+    "- \"procedures\", \"surgeries\", \"operations\" → Procedure\n",
+    "- \"conditions\", \"diagnoses\", \"problems\", \"diseases\" → Condition\n",
+    "- \"allergies\" → AllergyIntolerance\n",
+    "- \"immunizations\", \"vaccinations\" → Immunization\n",
+    "\n",
+    "Error handling:\n",
+    "- If requested type doesn't exist in available list: return empty selected_types, set error message with suggestion\n",
+    "- If type exists but query is ambiguous: return multiple types with lower confidence\n",
+    "- If query is too vague: return most likely types with low confidence and explain in reasoning\n",
+    "\n",
+    "IMPORTANT: Only select types from the available list above. Do not make up or suggest types that aren't in the list.\n",
+    "\n",
+    "Always explain your reasoning clearly.\"\"\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "2zww8o58zyk",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Initialize the SelectTypesAgent\n",
+    "select_agent = SelectTypesAgent(metadata)\n",
+    "\n",
+    "print(\"SelectTypesAgent initialized successfully!\")\n",
+    "print(f\"Agent has access to {len(metadata.searchable_types)} searchable resource types\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "nue0zgg0gem",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Test 1: Clear, specific query\n",
+    "print(\"=\" * 60)\n",
+    "print(\"TEST 1: Clear query - 'Find all patients born after 1990'\")\n",
+    "print(\"=\" * 60)\n",
+    "result = select_agent.select_types(\"Find all patients born after 1990\")\n",
+    "print(f\"Selected types: {result.selected_types}\")\n",
+    "print(f\"Confidence: {result.confidence:.2f}\")\n",
+    "print(f\"Reasoning: {result.reasoning}\")\n",
+    "print(f\"Error: {result.error}\")\n",
+    "print()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "1exvpv82m7w",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Test 2: Ambiguous query (multiple matching types)\n",
+    "print(\"=\" * 60)\n",
+    "print(\"TEST 2: Ambiguous query - 'Get medication data'\")\n",
+    "print(\"=\" * 60)\n",
+    "result = select_agent.select_types(\"Get medication data\")\n",
+    "print(f\"Selected types: {result.selected_types}\")\n",
+    "print(f\"Confidence: {result.confidence:.2f}\")\n",
+    "print(f\"Reasoning: {result.reasoning}\")\n",
+    "print(f\"Error: {result.error}\")\n",
+    "print()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "zhd5j3ldetk",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Test 3: Semantic query (blood pressure -> Observation)\n",
+    "print(\"=\" * 60)\n",
+    "print(\"TEST 3: Semantic query - 'Show me blood pressure readings'\")\n",
+    "print(\"=\" * 60)\n",
+    "result = select_agent.select_types(\"Show me blood pressure readings\")\n",
+    "print(f\"Selected types: {result.selected_types}\")\n",
+    "print(f\"Confidence: {result.confidence:.2f}\")\n",
+    "print(f\"Reasoning: {result.reasoning}\")\n",
+    "print(f\"Error: {result.error}\")\n",
+    "print()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "xpjxcjgink",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Test 4: Non-existent type\n",
+    "print(\"=\" * 60)\n",
+    "print(\"TEST 4: Non-existent type - 'Find XYZ records'\")\n",
+    "print(\"=\" * 60)\n",
+    "result = select_agent.select_types(\"Find XYZ records\")\n",
+    "print(f\"Selected types: {result.selected_types}\")\n",
+    "print(f\"Confidence: {result.confidence:.2f}\")\n",
+    "print(f\"Reasoning: {result.reasoning}\")\n",
+    "print(f\"Error: {result.error}\")\n",
+    "print()"
    ]
   },
   {
