--- a/agents.ipynb
+++ b/agents.ipynb
@@ -191,6 +191,122 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 47,
+   "id": "6d88b5f6",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Fetch available parameters\n",
+    "\n",
+    "def get_search_parameters(\n",
+    "    resource_type: str,\n",
+    "    metadata: FHIRMetadata\n",
+    ") -> list[SearchParameter]:\n",
+    "    \"\"\"\n",
+    "    Get available search parameters for a specific FHIR resource type.\n",
+    "\n",
+    "    Args:\n",
+    "        resource_type: The FHIR resource type name (e.g., 'Patient', 'Observation')\n",
+    "        metadata: FHIRMetadata object containing cached resource metadata\n",
+    "\n",
+    "    Returns:\n",
+    "        List of SearchParameter objects for the given resource type\n",
+    "\n",
+    "    Raises:\n",
+    "        ValueError: If resource_type is not found in metadata\n",
+    "    \"\"\"\n",
+    "    if resource_type not in metadata.resource_metadata:\n",
+    "        available_types = ', '.join(sorted(metadata.searchable_types)[:10])\n",
+    "        raise ValueError(\n",
+    "            f\"Resource type '{resource_type}' not found in metadata. \"\n",
+    "            f\"Available types include: {available_types}...\"\n",
+    "        )\n",
+    "\n",
+    "    return metadata.resource_metadata[resource_type].search_params"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 48,
+   "id": "1bq6jsmq87p",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "============================================================\n",
+      "Testing get_search_parameters() utility function\n",
+      "============================================================\n",
+      "\n",
+      "1. Getting search parameters for Patient:\n",
+      "   Patient has 25 search parameters\n",
+      "   First 10 parameters:\n",
+      "     - _id (token) - The ID of the resource...\n",
+      "     - _language (string) - The language of the resource...\n",
+      "     - active (token) - Whether the patient record is active...\n",
+      "     - address (string) - A server defined search that may match any of the ...\n",
+      "     - address-city (string) - A city specified in an address...\n",
+      "     - address-country (string) - A country specified in an address...\n",
+      "     - address-postalcode (string) - A postalCode specified in an address...\n",
+      "     - address-state (string) - A state specified in an address...\n",
+      "     - address-use (token) - A use code specified in an address...\n",
+      "     - birthdate (date) - The patient's date of birth...\n",
+      "\n",
+      "2. Getting search parameters for Observation:\n",
+      "   Observation has 40 search parameters\n",
+      "   First 10 parameters:\n",
+      "     - _id (token) - The ID of the resource...\n",
+      "     - _language (string) - The language of the resource...\n",
+      "     - based-on (reference) - Reference to the service request....\n",
+      "     - category (token) - The classification of the type of observation...\n",
+      "     - code (token) - The code of the observation type...\n",
+      "     - code-value-concept (composite) - Code and coded value parameter pair...\n",
+      "     - code-value-date (composite) - Code and date/time value parameter pair...\n",
+      "     - code-value-quantity (composite) - Code and quantity value parameter pair...\n",
+      "     - code-value-string (composite) - Code and string value parameter pair...\n",
+      "     - combo-code (token) - The code of the observation type or component type...\n",
+      "\n",
+      "3. Testing error handling with invalid type:\n",
+      "   ✓ Caught expected error: Resource type 'InvalidType' not found in metadata. Available types include: Account, ActivityDefinition, AdverseEvent, AllergyIntolerance, Appointment, AppointmentResponse, AuditEvent, Basic, Binary, BiologicallyDerivedProduct...\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Test get_search_parameters function\n",
+    "\n",
+    "print(\"=\" * 60)\n",
+    "print(\"Testing get_search_parameters() utility function\")\n",
+    "print(\"=\" * 60)\n",
+    "\n",
+    "# Test 1: Get parameters for Patient resource\n",
+    "print(\"\\n1. Getting search parameters for Patient:\")\n",
+    "patient_params = get_search_parameters(\"Patient\", metadata)\n",
+    "print(f\"   Patient has {len(patient_params)} search parameters\")\n",
+    "print(f\"   First 10 parameters:\")\n",
+    "for param in patient_params[:10]:\n",
+    "    doc = f\" - {param.documentation[:50]}...\" if param.documentation else \"\"\n",
+    "    print(f\"     - {param.name} ({param.type}){doc}\")\n",
+    "\n",
+    "# Test 2: Get parameters for Observation resource  \n",
+    "print(\"\\n2. Getting search parameters for Observation:\")\n",
+    "obs_params = get_search_parameters(\"Observation\", metadata)\n",
+    "print(f\"   Observation has {len(obs_params)} search parameters\")\n",
+    "print(f\"   First 10 parameters:\")\n",
+    "for param in obs_params[:10]:\n",
+    "    doc = f\" - {param.documentation[:50]}...\" if param.documentation else \"\"\n",
+    "    print(f\"     - {param.name} ({param.type}){doc}\")\n",
+    "\n",
+    "# Test 3: Error handling - invalid type\n",
+    "print(\"\\n3. Testing error handling with invalid type:\")\n",
+    "try:\n",
+    "    invalid_params = get_search_parameters(\"InvalidType\", metadata)\n",
+    "except ValueError as e:\n",
+    "    print(f\"   ✓ Caught expected error: {e}\")"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 30,
    "id": "rvi0kt69iy",
    "metadata": {},
@@ -447,9 +563,9 @@
       "TEST 3: Semantic query - 'Show me blood pressure readings'\n",
       "============================================================\n",
       "\n",
-      "1. Selected Type: Observation\n",
+      "1. Selected Type: DiagnosticReport\n",
       "   Confidence: 0.95\n",
-      "   Reasoning: Blood pressure readings are vital signs, which are stored as Observation resources in FHIR. Blood pressure measurements (systolic and diastolic) are classic examples of clinical observations recorded in the Observation resource type.\n",
+      "   Reasoning: The user explicitly requested 'diagnostic reports', which directly maps to the DiagnosticReport FHIR resource type. DiagnosticReport resources contain findings and interpretations of diagnostic tests performed on patients, and they have a 'subject' reference field that links to the Patient. The filter by subject's name (Larson) would be applied through a chained search parameter on the subject reference.\n",
       "\n"
      ]
     }
@@ -507,6 +623,14 @@
     "    print(f\"   Reasoning: {results.reasoning}\")\n",
     "print()"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "cfb80656",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
