Pull include and revinclude from capability statement

--- a/agents.ipynb
+++ b/agents.ipynb
@@ -31,7 +31,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 59,
    "id": "5w1o5t895l8",
    "metadata": {},
    "outputs": [],
@@ -50,6 +50,8 @@
     "    profile: str | None = None\n",
     "    interactions: list[str]  # ['read', 'search-type', 'create', etc.]\n",
     "    search_params: list[SearchParameter]\n",
+    "    include_values: list[str]\n",
+    "    revinclude_values: list[str]\n",
     "\n",
     "class FHIRMetadata(BaseModel):\n",
     "    \"\"\"Complete FHIR server metadata response\"\"\"\n",
@@ -65,7 +67,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 57,
    "id": "d5fcbeyapt",
    "metadata": {},
    "outputs": [],
@@ -108,7 +110,14 @@
     "    searchable_types: list[str] = []\n",
     "    resource_metadata: dict[str, ResourceMetadata] = {}\n",
     "\n",
-    "    for resource in capability_statement['rest'][0]['resource']:\n",
+    "    server_capability_metadata = next(\n",
+    "        (x for x in capability_statement['rest'] if x['mode'] == \"server\"),\n",
+    "        None  # default value if not found\n",
+    "    )\n",
+    "    if server_capability_metadata is None:\n",
+    "        raise ValueError(\"FHIR server does not expose capability information\")\n",
+    "\n",
+    "    for resource in server_capability_metadata['resource']:\n",
     "        resource_type = resource.get('type')\n",
     "        if not resource_type:\n",
     "            continue\n",
@@ -137,7 +146,9 @@
     "                type=resource_type,\n",
     "                profile=resource.get('profile'),\n",
     "                interactions=interaction_codes,\n",
-    "                search_params=search_params\n",
+    "                search_params=search_params,\n",
+    "                include_values=resource.get('searchInclude', []),\n",
+    "                revinclude_values=resource.get('searchRevInclude', [])\n",
     "            )\n",
     "\n",
     "    return FHIRMetadata(\n",
@@ -150,7 +161,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 60,
    "id": "ssupdz7wrha",
    "metadata": {},
    "outputs": [
@@ -167,7 +178,11 @@
       "Patient resource:\n",
       "  Interactions: ['read', 'vread', 'update', 'patch', 'delete', 'history-instance', 'history-type', 'create', 'search-type']\n",
       "  Number of search parameters: 25\n",
-      "  First 5 search parameters: ['_id', '_language', 'active', 'address', 'address-city']\n"
+      "  First 5 search parameters: ['_id', '_language', 'active', 'address', 'address-city']\n",
+      "  Number of include values: 4\n",
+      "  First 5 include values: ['*', 'Patient:general-practitioner', 'Patient:link', 'Patient:organization']\n",
+      "  Number of revinclude values: 0\n",
+      "  First 5 revinclude values: []\n"
      ]
     }
    ],
@@ -186,7 +201,11 @@
     "    print(f\"\\nPatient resource:\")\n",
     "    print(f\"  Interactions: {patient_meta.interactions}\")\n",
     "    print(f\"  Number of search parameters: {len(patient_meta.search_params)}\")\n",
-    "    print(f\"  First 5 search parameters: {[p.name for p in patient_meta.search_params[:5]]}\")"
+    "    print(f\"  First 5 search parameters: {[p.name for p in patient_meta.search_params[:5]]}\")\n",
+    "    print(f\"  Number of include values: {len(patient_meta.include_values)}\")\n",
+    "    print(f\"  First 5 include values: {[p for p in patient_meta.include_values[:5]]}\")\n",
+    "    print(f\"  Number of revinclude values: {len(patient_meta.revinclude_values)}\")\n",
+    "    print(f\"  First 5 revinclude values: {[p for p in patient_meta.revinclude_values[:5]]}\")"
    ]
   },
   {
@@ -227,7 +246,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 50,
    "id": "1bq6jsmq87p",
    "metadata": {},
    "outputs": [
@@ -253,19 +272,34 @@
       "     - address-use (token) - A use code specified in an address...\n",
       "     - birthdate (date) - The patient's date of birth...\n",
       "\n",
-      "2. Getting search parameters for Observation:\n",
-      "   Observation has 40 search parameters\n",
+      "2. Getting search parameters for Patient:\n",
+      "   Observation has 25 search parameters\n",
       "   First 10 parameters:\n",
       "     - _id (token) - The ID of the resource...\n",
       "     - _language (string) - The language of the resource...\n",
-      "     - based-on (reference) - Reference to the service request....\n",
-      "     - category (token) - The classification of the type of observation...\n",
-      "     - code (token) - The code of the observation type...\n",
-      "     - code-value-concept (composite) - Code and coded value parameter pair...\n",
-      "     - code-value-date (composite) - Code and date/time value parameter pair...\n",
-      "     - code-value-quantity (composite) - Code and quantity value parameter pair...\n",
-      "     - code-value-string (composite) - Code and string value parameter pair...\n",
-      "     - combo-code (token) - The code of the observation type or component type...\n",
+      "     - active (token) - Whether the patient record is active...\n",
+      "     - address (string) - A server defined search that may match any of the ...\n",
+      "     - address-city (string) - A city specified in an address...\n",
+      "     - address-country (string) - A country specified in an address...\n",
+      "     - address-postalcode (string) - A postalCode specified in an address...\n",
+      "     - address-state (string) - A state specified in an address...\n",
+      "     - address-use (token) - A use code specified in an address...\n",
+      "     - birthdate (date) - The patient's date of birth...\n",
+      "     - death-date (date) - The date of death has been provided and satisfies ...\n",
+      "     - deceased (token) - This patient has been marked as deceased, or as a ...\n",
+      "     - email (token) - A value in an email contact...\n",
+      "     - family (string) - A portion of the family name of the patient...\n",
+      "     - gender (token) - Gender of the patient...\n",
+      "     - general-practitioner (reference) - Patient's nominated general practitioner, not the ...\n",
+      "     - given (string) - A portion of the given name of the patient...\n",
+      "     - identifier (token) - A patient identifier...\n",
+      "     - language (token) - Language code (irrespective of use value)...\n",
+      "     - link (reference) - All patients linked to the given patient...\n",
+      "     - name (string) - A server defined search that may match any of the ...\n",
+      "     - organization (reference) - The organization that is the custodian of the pati...\n",
+      "     - phone (token) - A value in a phone contact...\n",
+      "     - phonetic (string) - A portion of either family or given name using som...\n",
+      "     - telecom (token) - The value in any kind of telecom details of the pa...\n",
       "\n",
       "3. Testing error handling with invalid type:\n",
       "   ✓ Caught expected error: Resource type 'InvalidType' not found in metadata. Available types include: Account, ActivityDefinition, AdverseEvent, AllergyIntolerance, Appointment, AppointmentResponse, AuditEvent, Basic, Binary, BiologicallyDerivedProduct...\n"
@@ -288,12 +322,12 @@
     "    doc = f\" - {param.documentation[:50]}...\" if param.documentation else \"\"\n",
     "    print(f\"     - {param.name} ({param.type}){doc}\")\n",
     "\n",
-    "# Test 2: Get parameters for Observation resource  \n",
-    "print(\"\\n2. Getting search parameters for Observation:\")\n",
-    "obs_params = get_search_parameters(\"Observation\", metadata)\n",
+    "# Test 2: Get parameters for Patient resource  \n",
+    "print(\"\\n2. Getting search parameters for Patient:\")\n",
+    "obs_params = get_search_parameters(\"Patient\", metadata)\n",
     "print(f\"   Observation has {len(obs_params)} search parameters\")\n",
     "print(f\"   First 10 parameters:\")\n",
-    "for param in obs_params[:10]:\n",
+    "for param in obs_params:\n",
     "    doc = f\" - {param.documentation[:50]}...\" if param.documentation else \"\"\n",
     "    print(f\"     - {param.name} ({param.type}){doc}\")\n",
     "\n",
