Hardcode common search params

--- a/agents.ipynb
+++ b/agents.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 1,
    "id": "c2805952",
    "metadata": {},
    "outputs": [],
@@ -18,7 +18,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 2,
    "id": "b0a48cc1",
    "metadata": {},
    "outputs": [],
@@ -31,7 +31,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 4,
    "id": "5w1o5t895l8",
    "metadata": {},
    "outputs": [],
@@ -67,7 +67,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": null,
    "id": "d5fcbeyapt",
    "metadata": {},
    "outputs": [],
@@ -161,7 +161,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 15,
    "id": "ssupdz7wrha",
    "metadata": {},
    "outputs": [
@@ -169,20 +169,21 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "FHIR Version: 4.0.0\n",
-      "Server URL: https://r4.smarthealthit.org\n",
+      "dict_keys(['mode', 'resource', 'interaction', 'operation'])\n",
+      "FHIR Version: 4.0.1\n",
+      "Server URL: https://hapi.fhir.org/baseR4\n",
       "\n",
       "Found 146 searchable resource types:\n",
       "['Account', 'ActivityDefinition', 'AdverseEvent', 'AllergyIntolerance', 'Appointment', 'AppointmentResponse', 'AuditEvent', 'Basic', 'Binary', 'BiologicallyDerivedProduct']\n",
       "\n",
       "Patient resource:\n",
-      "  Interactions: ['read', 'vread', 'update', 'patch', 'delete', 'history-instance', 'history-type', 'create', 'search-type']\n",
-      "  Number of search parameters: 25\n",
-      "  First 5 search parameters: ['_id', '_language', 'active', 'address', 'address-city']\n",
+      "  Interactions: ['search-type', 'update', 'vread', 'read', 'patch', 'history-type', 'history-instance', 'delete', 'create']\n",
+      "  Number of search parameters: 33\n",
+      "  First 5 search parameters: ['_filter', '_has', '_id', '_language', '_lastUpdated']\n",
       "  Number of include values: 4\n",
       "  First 5 include values: ['*', 'Patient:general-practitioner', 'Patient:link', 'Patient:organization']\n",
-      "  Number of revinclude values: 0\n",
-      "  First 5 revinclude values: []\n"
+      "  Number of revinclude values: 242\n",
+      "  First 5 revinclude values: ['Account:patient', 'Account:subject', 'ActivityDefinition:composed-of', 'ActivityDefinition:depends-on', 'ActivityDefinition:derived-from']\n"
      ]
     }
    ],
@@ -663,8 +664,167 @@
    "execution_count": null,
    "id": "cfb80656",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Defined 27 common FHIR search parameters\n",
+      "Sample parameters:\n",
+      "  - _id (token): The logical id of the resource (e.g., _id=123)...\n",
+      "  - _lastUpdated (date): When the resource was last changed (e.g., _lastUpdated=gt202...\n",
+      "  - _tag (token): Tags applied to this resource in Resource.meta.tag...\n",
+      "  - _profile (reference): Profiles this resource claims to conform to in Resource.meta...\n",
+      "  - _security (token): Security labels applied to this resource in Resource.meta.se...\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Hardcoded common FHIR search parameters available across all resources\n",
+    "\n",
+    "COMMON_SEARCH_PARAMS = [\n",
+    "    SearchParameter(\n",
+    "        name=\"_id\",\n",
+    "        type=\"token\",\n",
+    "        documentation=\"The logical id of the resource (e.g., _id=123)\"\n",
+    "    ),\n",
+    "    SearchParameter(\n",
+    "        name=\"_lastUpdated\",\n",
+    "        type=\"date\",\n",
+    "        documentation=\"When the resource was last changed (e.g., _lastUpdated=gt2023-01-01)\"\n",
+    "    ),\n",
+    "    SearchParameter(\n",
+    "        name=\"_tag\",\n",
+    "        type=\"token\",\n",
+    "        documentation=\"Tags applied to this resource in Resource.meta.tag\"\n",
+    "    ),\n",
+    "    SearchParameter(\n",
+    "        name=\"_profile\",\n",
+    "        type=\"reference\",\n",
+    "        documentation=\"Profiles this resource claims to conform to in Resource.meta.profile\"\n",
+    "    ),\n",
+    "    SearchParameter(\n",
+    "        name=\"_security\",\n",
+    "        type=\"token\",\n",
+    "        documentation=\"Security labels applied to this resource in Resource.meta.security\"\n",
+    "    ),\n",
+    "    SearchParameter(\n",
+    "        name=\"_source\",\n",
+    "        type=\"uri\",\n",
+    "        documentation=\"Identifies the source system in Resource.meta.source\"\n",
+    "    ),\n",
+    "    SearchParameter(\n",
+    "        name=\"_language\",\n",
+    "        type=\"token\",\n",
+    "        documentation=\"Language of the resource content\"\n",
+    "    ),\n",
+    "    SearchParameter(\n",
+    "        name=\"_text\",\n",
+    "        type=\"string\",\n",
+    "        documentation=\"Search on the narrative text of the resource (special)\"\n",
+    "    ),\n",
+    "    SearchParameter(\n",
+    "        name=\"_content\",\n",
+    "        type=\"string\",\n",
+    "        documentation=\"Search on the entire content of the resource (special)\"\n",
+    "    ),\n",
+    "    SearchParameter(\n",
+    "        name=\"_list\",\n",
+    "        type=\"special\",\n",
+    "        documentation=\"Search resources referenced by a List resource\"\n",
+    "    ),\n",
+    "    SearchParameter(\n",
+    "        name=\"_has\",\n",
+    "        type=\"special\",\n",
+    "        documentation=\"Reverse chaining - select resources based on properties of resources that refer to them. Examples: GET /Patient?_has:Observation:patient:code=1234-5 (Patients who have an Observation with code 1234-5), GET /Practitioner?_has:MedicationRequest:requester:_id=* (Practitioners who have authored any MedicationRequest)\"\n",
+    "    ),\n",
+    "    SearchParameter(\n",
+    "        name=\"_type\",\n",
+    "        type=\"special\",\n",
+    "        documentation=\"Filter by resource type (used in system-level searches)\"\n",
+    "    ),\n",
+    "    SearchParameter(\n",
+    "        name=\"_in\",\n",
+    "        type=\"reference\",\n",
+    "        documentation=\"Test membership in CareTeam, Group, or List\"\n",
+    "    ),\n",
+    "    SearchParameter(\n",
+    "        name=\"_filter\",\n",
+    "        type=\"special\",\n",
+    "        documentation=\"Advanced filter expression (FHIRPath-like syntax)\"\n",
+    "    ),\n",
+    "    SearchParameter(\n",
+    "        name=\"_query\",\n",
+    "        type=\"special\",\n",
+    "        documentation=\"Invoke a named/custom query operation\"\n",
+    "    ),\n",
+    "    SearchParameter(\n",
+    "        name=\"_sort\",\n",
+    "        type=\"string\",\n",
+    "        documentation=\"Comma-separated list of sort rules. Prefix with - for descending order. Example: _sort=-date,status\"\n",
+    "    ),\n",
+    "    SearchParameter(\n",
+    "        name=\"_count\",\n",
+    "        type=\"number\",\n",
+    "        documentation=\"Number of results per page. Example: _count=10\"\n",
+    "    ),\n",
+    "    SearchParameter(\n",
+    "        name=\"_include\",\n",
+    "        type=\"special\",\n",
+    "        documentation=\"Include referenced resources in results. Syntax: _include=[SourceResource]:[searchParam](:targetType)?. Example: _include=Observation:patient\"\n",
+    "    ),\n",
+    "    SearchParameter(\n",
+    "        name=\"_revinclude\",\n",
+    "        type=\"special\",\n",
+    "        documentation=\"Include resources that reference the matches (reverse include). Syntax: _revinclude=[SourceResource]:[searchParam](:targetType)?. Example: _revinclude=Provenance:target\"\n",
+    "    ),\n",
+    "    SearchParameter(\n",
+    "        name=\"_summary\",\n",
+    "        type=\"code\",\n",
+    "        documentation=\"Return summary view: true, false, text, count, data\"\n",
+    "    ),\n",
+    "    SearchParameter(\n",
+    "        name=\"_elements\",\n",
+    "        type=\"string\",\n",
+    "        documentation=\"Comma-separated list of elements to return. Example: _elements=identifier,name,birthDate\"\n",
+    "    ),\n",
+    "    SearchParameter(\n",
+    "        name=\"_contained\",\n",
+    "        type=\"code\",\n",
+    "        documentation=\"How to handle contained resources: true, false, both\"\n",
+    "    ),\n",
+    "    SearchParameter(\n",
+    "        name=\"_containedType\",\n",
+    "        type=\"code\",\n",
+    "        documentation=\"What to return when contained matches: container, contained\"\n",
+    "    ),\n",
+    "    SearchParameter(\n",
+    "        name=\"_total\",\n",
+    "        type=\"code\",\n",
+    "        documentation=\"Request total count precision: none, estimate, accurate\"\n",
+    "    ),\n",
+    "    SearchParameter(\n",
+    "        name=\"_maxresults\",\n",
+    "        type=\"number\",\n",
+    "        documentation=\"Maximum total results to return across all pages\"\n",
+    "    ),\n",
+    "    SearchParameter(\n",
+    "        name=\"_score\",\n",
+    "        type=\"boolean\",\n",
+    "        documentation=\"Whether to include relevance scores (true/false)\"\n",
+    "    ),\n",
+    "    SearchParameter(\n",
+    "        name=\"_graph\",\n",
+    "        type=\"reference\",\n",
+    "        documentation=\"Reference to a GraphDefinition for structured includes\"\n",
+    "    )\n",
+    "]\n",
+    "\n",
+    "print(f\"Defined {len(COMMON_SEARCH_PARAMS)} common FHIR search parameters\")\n",
+    "print(\"Sample parameters:\")\n",
+    "for param in COMMON_SEARCH_PARAMS[:5]:\n",
+    "    print(f\"  - {param.name} ({param.type}): {param.documentation[:60] if param.documentation else \"\"}...\")"
+   ]
   }
  ],
  "metadata": {
